--- a/Projeto HTML/index.html
+++ b/Projeto HTML/index.html
@@ -4,7 +4,8 @@
     </head>
 
     <body>
-        <center>Olá, mundo!</center>
+       <h1>Aula de como montar uma estrutura HTML</h1>
+       <h2>Explicação apronfudada sobre como usar a estrutura do HTML</h2>
     </body>
 
 </html>
