--- a/Projeto HTML/index.html
+++ b/Projeto HTML/index.html
@@ -4,8 +4,24 @@
     </head>
 
     <body>
-       <h1>Aula de como montar uma estrutura HTML</h1>
-       <h2>Explicação apronfudada sobre como usar a estrutura do HTML</h2>
+        <center>
+            <h1>Aula de como montar uma estrutura HTML</h1>
+        </center>
+        <center>
+            <h2>Explicação apronfudada sobre como usar a estrutura do HTML</h2>
+        </center>
+       <br/>
+        <center>
+        <b><p>
+            A estrutura principal deve iniciar com a etiqueta &lt;HTML&gt; e terminar com a etiqueta &lt;/HTML&gt;. O cabeçalho, delimitado pelas etiquetas &lt;HEAD&&gt; e &lt;/HEAD&gt;, destina-se a conter informações sobre o documento - por exemplo, o título do documento (que é construído com o elemento <u>TITLE</u> e aparece no título da janela do navegador).
+        </p></b>
+        </center>
+
+        <i><p>
+        <center>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero illo voluptatibus dolores ex fuga aperiam modi amet asperiores accusamus ullam vel rem libero officiis sequi, nemo, facilis enim impedit nobis!
+        </center>
+        </p></i>
     </body>
 
 </html>
