--- a/Projeto HTML/index.html
+++ b/Projeto HTML/index.html
@@ -10,7 +10,11 @@
         <center>
             <h2>Explicação apronfudada sobre como usar a estrutura do HTML</h2>
         </center>
-       <br/>
+
+        <br/>
+        
+        <center><img src="imagem.jpg" width="800" height="800"/></center> <!--Atributos-->
+
         <center>
         <b><p>
             A estrutura principal deve iniciar com a etiqueta &lt;HTML&gt; e terminar com a etiqueta &lt;/HTML&gt;. O cabeçalho, delimitado pelas etiquetas &lt;HEAD&&gt; e &lt;/HEAD&gt;, destina-se a conter informações sobre o documento - por exemplo, o título do documento (que é construído com o elemento <u>TITLE</u> e aparece no título da janela do navegador).
