--- a/Projeto HTML/index.html
+++ b/Projeto HTML/index.html
@@ -13,7 +13,13 @@
 
         <br/>
         
-        <center><img src="imagem.jpg" width="800" height="800"/></center> <!--Atributos-->
+        <img src="./assets/images/imagem.png" width="300" /><!--Atributos-->
+
+        <br/>
+
+        <video width="300" controls> <!--Não esquecer de adicionar o atributo controls para que apareça os indicadores de controle do vídeo-->
+            <source src="./assets/video/Vídeos.mp4" type="video/mp4">
+        </video>
 
         <center>
         <b><p>
