--- a/Projeto HTML/index.html
+++ b/Projeto HTML/index.html
@@ -1,11 +1,15 @@
 <html>
     <head>
         <title>Estrutura do HTML</title>
+
+        <style>
+            
+        </style>
     </head>
 
     <body>
         <center>
-            <h1>Aula de como montar uma estrutura HTML</h1>
+            <h1 style="font-size: 35px; color: blue; ">Aula de como montar uma estrutura HTML</h1>
         </center>
         <center>
             <h2>Explicação apronfudada sobre como usar a estrutura do HTML</h2>
