--- a/Projeto HTML/index.html
+++ b/Projeto HTML/index.html
@@ -2,17 +2,19 @@
     <head>
         <title>Estrutura do HTML</title>
 
-        <style>
-            
-        </style>
+        <link rel="stylesheet" href="./assets/css/style.css"/>
     </head>
 
     <body>
         <center>
-            <h1 style="font-size: 35px; color: blue; ">Aula de como montar uma estrutura HTML</h1>
+            <h1>Aula de como montar uma estrutura HTML</h1>
         </center>
         <center>
             <h2>Explicação apronfudada sobre como usar a estrutura do HTML</h2>
+        </center>
+
+        <center>
+            <h2>Este texto deve ser amarelo</h2>
         </center>
 
         <br/>
