--- a/Projeto HTML/index.html
+++ b/Projeto HTML/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Estrutura do HTML</title>
 
-        <link rel="stylesheet" href="./assets/css/style.css"/>
+        <link rel="stylesheet" href="./assets/css/estrutura.css"/>
     </head>
 
     <body>
