--- a/Projeto HTML/botao.html
+++ b/Projeto HTML/botao.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="./assets/css/botao.css">
     </head>
     <body>
-        <button>Clique Aqui!</button>
+        <a href="https://google.com" target="_blank"><button>Clique Aqui!</button></a>
+        
     </body>
 </html>
