--- a/Projeto HTML/blog.html
+++ b/Projeto HTML/blog.html
@@ -3,14 +3,38 @@
         <title>BLOG</title>        
     </head>
     <body>
-        <h1>A História do Brasil</h1>
-        <br>
-        <p>A História do Brasil é complexa, como diria Rui Barbosa: <q>A vida é boa!</q>
-        </p>
-        <br>
-        <blockquote>
-            Ser ou não ser, eis a questão.<br>
-            <cite>William Shakespeare, Hamlet.</cite>
-        </blockquote>
+        <article>
+
+            <header>
+                <h1>A História do Brasil</h1>
+                <h2>A história não contada</h2>
+            </header>
+
+            <br/>
+
+            <section>
+                <p>A História do Brasil é complexa, como diria Rui Barbosa: <q>A vida é boa!</q>
+                </p>
+                <br>
+                <blockquote>
+                    Ser ou não ser, eis a questão.<br>
+                    <cite>William Shakespeare, Hamlet.</cite>
+                </blockquote>
+
+                <br/>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam reiciendis vel maxime distinctio, inventore consectetur vitae accusantium, quidem tempora illum, culpa praesentium et a. Molestiae doloribus aliquam perspiciatis aspernatur.</p>
+
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti laudantium, natus velit quod dicta animi culpa blanditiis ipsum ullam alias totam eveniet atque, repellendus ab voluptatem facere eum mollitia. Dicta.</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dolor illum consequatur explicabo iusto odio placeat est molestiae voluptatum reprehenderit, aliquam voluptas saepe nam dolores aperiam impedit illo magni provident.              
+                </p>
+            </section>
+
+            <footer>
+                <p>Antonio Araújo</p>
+            </footer>
+
+    </article>
     </body>
 </html>
