--- a/Projeto HTML/Campos/formulario.html
+++ b/Projeto HTML/Campos/formulario.html
@@ -4,8 +4,11 @@
     </head>
     <body>
         <h1>Formulário</h1><br>
-        <form action="" method="">
-            
+        <form action="/cadastro" method="GET">
+            <input type="text" name="nome"/>
+
+            <br>
+            <input type="submit" value="enviar"/>         
         </form>
     </body>
 </html>
