--- a/Projeto HTML/Campos/formulario.html
+++ b/Projeto HTML/Campos/formulario.html
@@ -8,15 +8,15 @@
 
         <form action="/cadastro" method="get">
 
-            <input type="date" name="data" />
+            <input type="week" name="semana" />
 
             <br/><br/>
 
-            <input type="time" name="horario" />
+            <input type="month" name="mes" />
 
             <br/><br/>
 
-            <input type="datetime-local" name="dataehora" />
+            <input />
 
             <br/><br/>
             
