--- a/Projeto HTML/Campos/formulario.html
+++ b/Projeto HTML/Campos/formulario.html
@@ -6,20 +6,12 @@
     <body>
         <h1>Formulário</h1><br>
 
-        <form action="/cadastro" method="get">
+        <form action="/cadastro" enctype="multipart/form-data" method="get">
 
-            <input type="week" name="semana" />
-
-            <br/><br/>
-
-            <input type="month" name="mes" />
+            <input type="file" name="arquivo" />
 
             <br/><br/>
-
-            <input />
-
-            <br/><br/>
-            
+                                    
              <input type="submit" value="enviar" />            
         </form>
     </body>
