--- a/Projeto HTML/Campos/formulario.html
+++ b/Projeto HTML/Campos/formulario.html
@@ -6,18 +6,14 @@
     <body>
         <h1>Formulário</h1><br>
 
-        <form action="/cadastro" enctype="multipart/form-data" method="get">          
+        <form action="/cadastro" method="get">
             
-            <select name="parcelas">
-                <option value="0">-- parcelas --</option>
-                <option value="1">R$ 1.000,00 - 1x sem juros</option>
-                <option selected value="2">R$ 500,00 - 2x sem juros</option>
-                <option value="3">R$ 333,33 - 3x sem juros</option>
-                <option value="4">R$ 250,00 - 4x sem juros</option>
-                <option value="5">R$ 260,00 - 5x com juros</option>                
-            </select>
-            
-            <br/><br/>    
+            <label>Defina o percentual de completude da sua tarefa</label>
+            <br/><br/>
+            <input type="range" name="percentual" min="0" max="100" value="0" />
+
+            <br/><br/>
+
             <input type="submit" value="enviar" />            
         </form>
     </body>
