--- a/Google/homepage.html
+++ b/Google/homepage.html
@@ -1,10 +1,21 @@
 <html>
     <head>
         <title>GOOGLE</title>
-        <link rel="stylesheet" href="homepage.css">
+        <link rel="stylesheet" href="./homepage.css" />
     </head>
 
     <body>
+        <center>
+            <img class="logo" src="https://www.google.com.br/logos/doodles/2024/seasonal-holidays-2024-6753651837110333-law.gif" />
+                     
+
+            <br/><br/><br/>
+
+            <input type="search" class="campo--pesquisa" />
+
+            <br/><br/>
+            <button>Pesquisa Google</button> <button>Estou com sorte</button>
+        </center>
         
     </body>
 </html>
