--- a/Google/homepage.html
+++ b/Google/homepage.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>GOOGLE</title>
+        <title>Google</title>
         <link rel="stylesheet" href="./homepage.css" />
     </head>
 
@@ -14,6 +14,7 @@
             <input type="search" class="campo--pesquisa" />
 
             <br/><br/>
+
             <button>Pesquisa Google</button> <button>Estou com sorte</button>
         </center>
         
