--- a/flexbox.html
+++ b/flexbox.html
@@ -6,11 +6,21 @@
 
     <body>
         <div class="todo">
-            <div class="item">1</div>
-            <div class="item">2</div>
-            <div class="item">3</div>
-            <div class="item">4</div>
-            <div class="item">5</div>
+
+            <div class="parte--logo">
+                
+                <div class="logo">
+                    <b>Minha Logo</b>
+                </div>
+                
+            </div>
+            <div class="parte--menus">
+                <div class="menu">HOME</div>
+                <div class="menu">SOBRE</div>
+                <div class="menu">LOJA</div>
+                <div class="menu">FOTOS</div>
+                <div class="menu">CONTATO</div>
+            </div>           
         </div>
     </body>
 </html>
