--- a/Javascript/switch.html
+++ b/Javascript/switch.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title></title>
+        <title>Switch</title>
         <script src="./switch.js"></script>
     </head>
     <body>
