--- a/Javascript/gerenciador_de_notas.html
+++ b/Javascript/gerenciador_de_notas.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Gerenciador de Notas</title>
-        <script tpe="text/javacript" src="gerenciador_de_notas.js"></script>
+        <script type="text/javacript" src="gerenciador_de_notas.js"></script>
     </head>
     <body>
         
