--- a/Javascript/desestruturing.html
+++ b/Javascript/desestruturing.html
@@ -1,8 +1,9 @@
-<html>
+<html lang="pt-br">
     <head>
+        <meta charset="UTF-8">
         <title>DESESTRUTURING</title>
+        <script type="text/javascript" src="desestruturing.js"></script>
     </head>
-    <body>
-        
+    <body>        
     </body>
 </html>
