--- a/Javascript/dom1.html
+++ b/Javascript/dom1.html
@@ -1,10 +1,12 @@
 <html>
     <head>   
         <title>MANIPULAÇÃO DE DOM 1</title>
+        <link rel="stylesheet" href="dom1.css">
         
     </head>
     <body>
-        <h1 id="titulo">Manipulação de DOM 1</h1>
+        <h1 id="titulo" class="texto--verde">Manipulação de DOM 1</h1>
+        <h2 id="subtitulo" class="texto--verde">Subtitulo</h2>
 
         <script type="text/javascript" src="dom1.js" ></script>   
     </body>
