--- a/Javascript/dom1.html
+++ b/Javascript/dom1.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1 id="titulo" class="texto--verde">Manipulação de DOM 1</h1>
+        <h1>Manipulação de DOM 1.1</h1>
         <h2 id="subtitulo" class="texto--verde">Subtitulo</h2>
 
         <script type="text/javascript" src="dom1.js" ></script>   
