--- a/Javascript/dom1.html
+++ b/Javascript/dom1.html
@@ -5,6 +5,7 @@
         
     </head>
     <body>
+        <div id="espaco"></div>
         <h1 id="titulo" class="texto--verde">Manipulação de DOM 1</h1>
         <h1>Manipulação de DOM 1.1</h1>
         <h2 id="subtitulo" class="texto--verde">Subtitulo</h2>
