--- a/Javascript/dom2.html
+++ b/Javascript/dom2.html
@@ -5,6 +5,15 @@
         
     </head>
     <body>
+        <div id="container" class="container"></div>
+
+        <div class="container">
+
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam corrupti, ratione sunt obcaecati unde accusamus molestiae nulla libero, nemo quidem iure? Dicta odit ullam, earum voluptatem est nihil quod fugiat?</p>
+
+        </div>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rerum fugiat a! Voluptates soluta officiis, nobis alias aliquam molestiae hic, quisquam ex incidunt doloremque voluptas. Culpa veniam inventore maiores! Asperiores?</p>
         
 
         <script type="text/javascript" src="dom2.js" ></script>   
