--- a/Javascript/dom2.html
+++ b/Javascript/dom2.html
@@ -7,14 +7,17 @@
     <body>
         <div id="container" class="container"></div>
 
-        <div class="container">
+        <div class="paragrafo--bonito">
 
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam corrupti, ratione sunt obcaecati unde accusamus molestiae nulla libero, nemo quidem iure? Dicta odit ullam, earum voluptatem est nihil quod fugiat?</p>
+            <p>
+                <b>Texto tal:</b>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam corrupti, ratione sunt obcaecati unde accusamus molestiae nulla libero, nemo quidem iure? Dicta odit ullam, earum voluptatem est nihil quod fugiat?
+            </p>
 
         </div>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rerum fugiat a! Voluptates soluta officiis, nobis alias aliquam molestiae hic, quisquam ex incidunt doloremque voluptas. Culpa veniam inventore maiores! Asperiores?</p>
-        
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rerum fugiat a! Voluptates soluta officiis, nobis alias aliquam molestiae hic, quisquam ex incidunt doloremque voluptas. Culpa veniam inventore maiores! Asperiores?</p>
+            
 
         <script type="text/javascript" src="dom2.js" ></script>   
     </body>
