--- a/Javascript/dom3.html
+++ b/Javascript/dom3.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         
-        <h1 class="titulo">MANIPULANDO O DOM - AULA 3</h1>
+        <h1 class="titulo tema--verde">MANIPULANDO O DOM - AULA 3</h1>
 
         <script type="text/javascript" src="dom3.js" ></script>   
     </body>
