--- a/Javascript/dom3.html
+++ b/Javascript/dom3.html
@@ -8,6 +8,8 @@
         
         <h1 class="titulo tema--verde">MANIPULANDO O DOM - AULA 3</h1>
 
+        <img class="imagem" src="https://t.ctcdn.com.br/lvns56iaSMyHvyTur4JeYS_NYeY=/i606944.png"/>
+
         <script type="text/javascript" src="dom3.js" ></script>   
     </body>
 </html>
